# design-patterns-for-embedded-system-in-c

./: AGENTS.md  CMakeLists.txt  chapter3-hardware-patterns-memorize.md  oop-and-uml-basics.md
chapter1/01-Sensor/: CMakeLists.txt
chapter1/02-Queue/: CMakeLists.txt
chapter1/03-SecuritySupervisor/: CMakeLists.txt
chapter2/01-client-server/: CMakeLists.txt
chapter2/02-observer/: CMakeLists.txt
chapter2/02-observer/doc/: observer-class-diagram.puml  observer-model.puml  observer-sequence-diagram.puml
chapter3/01-hardwareproxy/: CMakeLists.txt
chapter3/02-adapter/: AcmeO2Adapter.c  AcmeO2Adapter.h  CMakeLists.txt  GasDisplay.c  GasDisplay.h  GasMixer.c  GasMixer.h  O2SensorFactory.c  O2SensorFactory.h  UltimateO2Adapter.c  UltimateO2Adapter.h  iO2Sensor.c  iO2Sensor.h
chapter3/02-adapter/doc/: adapter-class-diagram.puml  adapter-overview.md  adapter-sequence-diagram.puml
chapter3/03-intermediary/: CMakeLists.txt
chapter3/03-intermediary/doc/: intermediary-class-diagram.puml  intermediary-overview.md  intermediary-sequence-diagram.puml
chapter3/04-observer/: CMakeLists.txt  DisplayClient.c  DisplayClient.h  GasSensor.c  GasSensor.h  main.c
chapter3/04-observer/doc/: observer-class-diagram.puml  observer-overview.md  observer-sequence-diagram.puml
chapter3/05-debounce/: CMakeLists.txt
chapter3/05-debounce/doc/: debounce-class-diagram.puml  debounce-overview.md  debounce-sequence-diagram.puml
chapter3/06-interupt/: CMakeLists.txt
chapter3/07-poll/: CMakeLists.txt
chapter4/01-loop/: CMakeLists.txt
chapter4/02-staticpriority/: CMakeLists.txt
chapter4/03-critical/: CMakeLists.txt
chapter4/04-guard/: CMakeLists.txt
chapter4/05-queue/: CMakeLists.txt
chapter4/06-ThreadBarrier/: CMakeLists.txt
chapter4/07-simulaLock/: CMakeLists.txt
chapter4/08-orderLock/: CMakeLists.txt
chapter5/01-singleReceptor/: CMakeLists.txt
chapter5/02-MultiReceptor/: CMakeLists.txt
chapter5/03-StateTable/: CMakeLists.txt
chapter5/04-StatePattern/: CMakeLists.txt
chapter5/05-AndState/: CMakeLists.txt
chapter6/01-OwnShipAttitude/: CMakeLists.txt
chapter6/02-crc/: CMakeLists.txt
chapter6/03-SmartData/: CMakeLists.txt
chapter6/04-channelmode/: CMakeLists.txt
chapter6/05-protectsinglechannel/: CMakeLists.txt
