cmake_minimum_required(VERSION 3.16)

project(design_patterns_for_embedded_systems_in_c C)

include(CTest)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

message(STATUS "Buildable subchapters enabled in this CMake build:")
message(STATUS "  chapter1/01-Sensor")
message(STATUS "  chapter1/03-SecuritySupervisor")
message(STATUS "  chapter2/01-client-server")
message(STATUS "  chapter3/01-hardwareproxy")
message(STATUS "  chapter3/02-adapter")
message(STATUS "  chapter3/03-intermediary")
message(STATUS "  chapter3/04-observer")
message(STATUS "  chapter3/05-debounce")
message(STATUS "  chapter3/07-poll")
message(STATUS "  chapter4/03-critical")
message(STATUS "  chapter6/02-crc")

message(STATUS "Subchapters wired into CMake as placeholders due source issues or missing external dependencies:")
message(STATUS "  chapter1/02-Queue")
message(STATUS "  chapter2/02-observer")
message(STATUS "  chapter3/06-interupt")
message(STATUS "  chapter4/01-loop")
message(STATUS "  chapter4/02-staticpriority")
message(STATUS "  chapter4/04-guard")
message(STATUS "  chapter4/05-queue")
message(STATUS "  chapter4/06-ThreadBarrier")
message(STATUS "  chapter4/07-simulaLock")
message(STATUS "  chapter4/08-orderLock")
message(STATUS "  chapter5/01-singleReceptor")
message(STATUS "  chapter5/02-MultiReceptor")
message(STATUS "  chapter5/03-StateTable")
message(STATUS "  chapter5/04-StatePattern")
message(STATUS "  chapter5/05-AndState")
message(STATUS "  chapter6/01-OwnShipAttitude")
message(STATUS "  chapter6/03-SmartData")
message(STATUS "  chapter6/04-channelmode")
message(STATUS "  chapter6/05-protectsinglechannel")

add_subdirectory(chapter1/01-Sensor)
add_subdirectory(chapter1/02-Queue)
add_subdirectory(chapter1/03-SecuritySupervisor)
add_subdirectory(chapter2/01-client-server)
add_subdirectory(chapter2/02-observer)
add_subdirectory(chapter3/01-hardwareproxy)
add_subdirectory(chapter3/02-adapter)
add_subdirectory(chapter3/03-intermediary)
add_subdirectory(chapter3/04-observer)
add_subdirectory(chapter3/05-debounce)
add_subdirectory(chapter3/06-interupt)
add_subdirectory(chapter3/07-poll)
add_subdirectory(chapter4/01-loop)
add_subdirectory(chapter4/02-staticpriority)
add_subdirectory(chapter4/03-critical)
add_subdirectory(chapter4/04-guard)
add_subdirectory(chapter4/05-queue)
add_subdirectory(chapter4/06-ThreadBarrier)
add_subdirectory(chapter4/07-simulaLock)
add_subdirectory(chapter4/08-orderLock)
add_subdirectory(chapter5/01-singleReceptor)
add_subdirectory(chapter5/02-MultiReceptor)
add_subdirectory(chapter5/03-StateTable)
add_subdirectory(chapter5/04-StatePattern)
add_subdirectory(chapter5/05-AndState)
add_subdirectory(chapter6/01-OwnShipAttitude)
add_subdirectory(chapter6/02-crc)
add_subdirectory(chapter6/03-SmartData)
add_subdirectory(chapter6/04-channelmode)
add_subdirectory(chapter6/05-protectsinglechannel)
